--- a/PhotoDrop/Launch Screen.storyboard
+++ b/PhotoDrop/Launch Screen.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,37 +19,38 @@
                         <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8SY-Mu-70h">
+                    <view key="view" contentMode="scaleToFill" id="nWY-1B-GJ9">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhotoDrop" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="Pj1-UK-VWd">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loadingScreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="PWy-8n-jT1">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright © 2017 PhotoDrop. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Nsg-Cp-GnV">
+                                <rect key="frame" x="20" y="626.5" width="336" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhotoDrop" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="VeU-Wh-ZGm">
                                 <rect key="frame" x="20" y="144" width="335" height="43"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diamond-blue-background" translatesAutoresizingMaskIntoConstraints="NO" id="3bB-H5-8mJ">
-                                <rect key="frame" x="41" y="195" width="295" height="266"/>
-                            </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright © 2017 PhotoDrop. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="SfX-2Z-RIK">
-                                <rect key="frame" x="19" y="638" width="336" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.9137254901960784" blue="0.63529411764705879" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.2274509804" green="0.59215686270000001" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Pj1-UK-VWd" firstAttribute="leading" secondItem="SfX-2Z-RIK" secondAttribute="leading" constant="1" id="1il-t4-1VK"/>
-                            <constraint firstItem="SfX-2Z-RIK" firstAttribute="top" secondItem="3bB-H5-8mJ" secondAttribute="bottom" constant="177" id="94O-aQ-CQK"/>
-                            <constraint firstItem="3bB-H5-8mJ" firstAttribute="top" secondItem="Pj1-UK-VWd" secondAttribute="bottom" constant="8" id="FIS-Tu-YGC"/>
-                            <constraint firstItem="Pj1-UK-VWd" firstAttribute="centerX" secondItem="SfX-2Z-RIK" secondAttribute="centerX" id="Gkb-kv-c9x"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="3bB-H5-8mJ" secondAttribute="trailing" constant="23" id="Ucv-Ni-HnX"/>
-                            <constraint firstItem="Pj1-UK-VWd" firstAttribute="leading" secondItem="8SY-Mu-70h" secondAttribute="leadingMargin" constant="4" id="XFF-IB-xiw"/>
-                            <constraint firstItem="Pj1-UK-VWd" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="124" id="Y0Y-Pc-UBR"/>
-                            <constraint firstItem="3bB-H5-8mJ" firstAttribute="leading" secondItem="8SY-Mu-70h" secondAttribute="leadingMargin" constant="25" id="fNp-6y-aLU"/>
-                            <constraint firstItem="Pj1-UK-VWd" firstAttribute="centerX" secondItem="8SY-Mu-70h" secondAttribute="centerX" id="sd9-sj-4m5"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="PWy-8n-jT1" secondAttribute="bottom" id="0l2-sM-6U4"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="PWy-8n-jT1" secondAttribute="trailing" constant="-16" id="H4t-4A-rIs"/>
+                            <constraint firstItem="PWy-8n-jT1" firstAttribute="leading" secondItem="nWY-1B-GJ9" secondAttribute="leadingMargin" constant="-16" id="J4m-ls-0eV"/>
+                            <constraint firstItem="Nsg-Cp-GnV" firstAttribute="leading" secondItem="nWY-1B-GJ9" secondAttribute="leading" constant="20" symbolic="YES" id="Ma8-jb-7GM"/>
+                            <constraint firstItem="VeU-Wh-ZGm" firstAttribute="centerY" secondItem="nWY-1B-GJ9" secondAttribute="bottom" multiplier="1/3" constant="-56.833333333333314" id="NGt-M3-aDq"/>
+                            <constraint firstAttribute="centerX" secondItem="VeU-Wh-ZGm" secondAttribute="centerX" id="TtV-Bc-MHq"/>
+                            <constraint firstItem="PWy-8n-jT1" firstAttribute="top" secondItem="nWY-1B-GJ9" secondAttribute="topMargin" id="UO2-gD-6BV"/>
+                            <constraint firstItem="VeU-Wh-ZGm" firstAttribute="leading" secondItem="nWY-1B-GJ9" secondAttribute="leading" constant="20" symbolic="YES" id="ayO-hn-hJd"/>
+                            <constraint firstAttribute="bottom" secondItem="Nsg-Cp-GnV" secondAttribute="bottom" constant="20" id="cx2-Pf-oXc"/>
+                            <constraint firstAttribute="centerX" secondItem="Nsg-Cp-GnV" secondAttribute="centerX" id="lmN-x0-Xwo"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -58,6 +60,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="diamond-blue-background" width="320" height="266"/>
+        <image name="loadingScreenBackground" width="375" height="667"/>
     </resources>
 </document>
